Fix Alignment and Responsiveness Issues

--- a/frontend/src/app/teaching/teaching.component.scss
+++ b/frontend/src/app/teaching/teaching.component.scss
@@ -4,3 +4,9 @@ teaching-card {
     width: 100% !important;
     max-width: 100% !important;
 }
+
+notes-card {
+    min-width: 100% !important;
+    width: 100% !important;
+    max-width: 100% !important;
+}
