--- a/frontend/src/styles.scss
+++ b/frontend/src/styles.scss
@@ -104,7 +104,6 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
         margin-left: 18%;
         margin-right: 18%;
         align-items: center;
-        max-width: 1200px;
 
         h1, h2, h3 {
             text-align: center;
